tests/error/locals-1.moc
void main() {
    int a = 1;
    char a;
}
